* 0.10.5 (unreleased)
   * Start counting effect stacks from 1 not 2
   * Fixed launcher weapons using outfit mass instead of ammo mass
   * taiomi: fixed claim check for last mission
   * Fixed some typos
   * Fixed equipment of Lancelot in "Sharkman Is Back" mission
   * nelly02: Nelly now stops recommending stuff that only does a little disable

* 0.10.4
   * Fixed crashes related to multiple effects being active at once
   * Fixed multiple mission_done hooks not passing parameter correctly
   * Fixed plugin strings not being initialized with mismatched saves
   * ec06: made the final battle work much better

* 0.10.3
   * Fixed crash when using fits currently selected ship outfit filter
   * Fixed escorts always being set to aggressive when loading a save
   * Fixed Dvaered standing cap increase being lost after loading game
   * Made space dust a bit less bright when it starts turning into lines
   * derelict_rescue: play money sound instead of victory sound on completion
   * rehab: fixed crash when aborting rehabilitation missions
   * foundation station, efferey: fixed not using pirate landing script

* 0.10.2
   * Fixed escorts sometimes not following their leader and landing
   * Fixed autonav always wanting to go to the edge of jump points
   * Fixed crash when causing multiple dialogues to run in the background
   * Fixed outfit lua being called before initialization
   * Fixed not giving the AI a name when updating a save breaking the updater script
   * Fixed deleting last snapshot of a save switching to another pilot's saves
   * Fixed saves and snapshots not displaying correct name with version mismatch
   * Fixed crash when deleting Lua-side fonts, should fix crash with POI
   * Fixed swapping ships with mission cargo sharing name with other cargo can lead to wrong cargo getting duplicated
   * Fixed original music at Research Post Sigma-13
   * Fixed music stopping after playing once in new games